--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact
 section_id: contact
 ---
 
-<div class='full parallax' style='background-image: url(images/@stock/contact-header-bg.jpg); color: #fff;'>
+<div class='full parallax' style='background-image: url(images/contact.jpg); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
       {% include section-header.html title="Contact Us" tagline="Drop by or send an email to us" color="#fff" class="big" %}
@@ -39,13 +39,13 @@ section_id: contact
       <div class='medium-4 columns'>
         <div class='contact-details'>
           <h4>Our location:</h4>
-          <p>41 Dean Street, London, UK</p>
+          <p>SEO 41 Plot 17, Chandigarh, India</p>
           <h4>Our Phone:</h4>
-          <p>+86 (03) 9810 4612</p>
+          <p>+91 9816 2616</p>
           <h4>Fax:</h4>
-          <p>+6102 236338 5456</p>
+          <p>+0172 136437 3400</p>
           <h4>Our Email:</h4>
-          <p>info@devoll-team.com</p>
+          <p>info@swagyrecordz.com</p>
         </div>
       </div>
     </div>
